Fix layout issues on small-screen mobile devices

--- a/www.filebot.net/mobile.css
+++ b/www.filebot.net/mobile.css
@@ -72,6 +72,10 @@
 		display: none;
 	}
 
+	div.reference {
+		overflow-wrap: anywhere;
+	}
+
 	ul.repository {
 		columns: 1;
 		width: unset;
